--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 git+https://github.com/KurimuzonAkuma/pyrogram.git
 tgcrypto
-pymongo[srv]==3.12.3
-motor==2.5.1
-marshmallow==3.14.1
-umongo==3.0.1
+pymongo[srv]
+motor
+marshmallow
+umongo
 requests
 bs4
-imdbpy==2021.4.18
+imdbpy
 aiohttp
